--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,9 +43,12 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.9",
+    "@types/moxios": "^0.4.12",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "check-prop-types": "^1.1.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "moxios": "^0.4.0"
   }
 }
